Refactoring Dungeon and subtypes into DungeonEntrance, Dungeon and DungeonFloor(s), now generating dungeon on WorldGenerator